[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "Vank"
version = "0.1.0"
authors = [
    { name = "WanKe", email = "852003793@qq.com" },
]
description = "A Python Web Framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-multipart==0.0.5",
    "itsdangerous==2.1.2"
]
[project.urls]
"Homepage" = "https://github.com/Vank-WebFramework/Vank"